# nvim-cxx

./: .gitignore  CMakeLists.txt  Makefile  api_gen.py
include/: nvim.hpp
src/: test.cpp
